@@ -10,7 +10,8 @@
 local lib     = {
   type = 'dub.MemoryStorage', 
 }
-local DOXYGEN_VERSION = "1.7.5"
+-- Pattern to check for Doxygen version
+local DOXYGEN_VERSION = "1%.7%."
 local private = {}
 local parse   = {}
 lib.__index   = lib
@@ -1153,7 +1154,7 @@ function private.checkDoxygenVersion(data)
   local str = (data:find('doxygen') or {version='???'}).version
   if not checked_versions[str] then
     checked_versions[str] = true
-    local pattern = '^'..string.gsub(DOXYGEN_VERSION, '%.', '%.')
+    local pattern = '^'..DOXYGEN_VERSION
     if not string.match(str, pattern) then
       print(string.format("WARNING: XML generated by Doxygen '%s'. This version of Dub was tested with version '%s'.", str, DOXYGEN_VERSION))
     end
