@@ -30,6 +30,7 @@
 
 #include <stdlib.h>  // malloc
 #include <string.h>  // strlen strcmp
+#include <assert.h>  // assert
 
 #define DUB_EXCEPTION_BUFFER_SIZE 256  
 #define TYPE_EXCEPTION_MSG "expected %s, found %s"
@@ -68,24 +69,18 @@ TypeException::TypeException(lua_State *L, int narg, const char *type, bool is_s
 // =============================================== dub::Object
 // ======================================================================
 void Object::pushobject(lua_State *L, void *ptr, const char *tname, bool gc) {
-  if (!gc) {
-    dub_pushudata(L, ptr, tname, gc);
-    return;
-  }
+  DubUserdata *udata = (DubUserdata*)lua_newuserdata(L, sizeof(DubUserdata));
+  udata->ptr = ptr;
+  udata->gc  = gc;
   if (dub_userdata_) {
-    // We already have a userdata. Is there a way to push the same value again ?
-    // invalidate previous userdata
-    dub_userdata_->ptr = NULL;
-    dub_userdata_->gc = false;
+    // We already have a userdata. Push a new userdata (copy to this item,
+    // should never gc).
+    assert(!gc);
+    udata->gc = false;
+  } else {
+    // First initialization.
+    dub_userdata_ = udata;
   }
-  dub_userdata_ = (DubUserdata*)lua_newuserdata(L, sizeof(DubUserdata));
-  dub_userdata_->ptr = ptr;
-  if (!gc) {
-    // This is not supported yet and should never be generated by dub binder.
-    throw Exception("Calling pushobject with gc = false is not supported (bug in dub bindings)\n");
-  }
-  dub_userdata_->gc  = true;
-
   // the userdata is now on top of the stack
 
   // set metatable (contains methods)
@@ -100,6 +95,8 @@ void Object::pushobject(lua_State *L, void *ptr, const char *tname, bool gc) {
 void Thread::pushobject(lua_State *L, void *ptr, const char *tname, bool gc) {
   if (dub_L) {
     if (!strcmp(tname, dub_typename_)) {
+      // Pushing same type again.
+
       // We do not care about gc being false here since we share the same userdata
       // object.
       // push self
@@ -107,26 +104,22 @@ void Thread::pushobject(lua_State *L, void *ptr, const char *tname, bool gc) {
       lua_xmove(dub_L, L, 1);
       // <self>
     } else {
-      // Different type (cast).
+      // Type cast.
+      assert(!gc);
       dub_pushudata(L, ptr, tname, gc);
       // <udata>
     }
     return;
   }
 
-  if (!gc) {
-    // Passing pointers to this type (casting/pointer to member) is not
-    // fully supported. Fallback to simple userdata with {self}.
-    dub_pushudata(L, ptr, tname, gc);
-    return;
-  }
+  // initialization
 
   //--=============================================== setup super
   lua_newtable(L);
   // <self>
-  Object::pushobject(L, ptr, tname, true);
-  dub_typename_ = tname;
+  Object::pushobject(L, ptr, tname, gc);
   // <self> <udata>
+  dub_typename_ = tname;
   lua_pushlstring(L, "super", 5);
   // <self> <udata> 'super'
   lua_pushvalue(L, -2);
