@@ -14,9 +14,10 @@ require 'lubyk'
 local should = test.Suite('dub.LuaBinder - namespace')
 local binder = dub.LuaBinder()
 
+local base = lk.dir()
 local ins = dub.Inspector {
   INPUT    = {
-    'test/fixtures/namespace',
+    base .. '/fixtures/namespace',
   },
   doc_dir  = lk.dir() .. '/tmp',
 }
@@ -52,7 +53,7 @@ function should.bindGlobalFunctionNotInNamespace()
 end
 
 function should.bindAll()
-  local tmp_path = 'test/tmp'
+  local tmp_path = base .. '/tmp'
   lk.rmTree(tmp_path, true)
 
   binder:bind(ins, {
@@ -63,13 +64,13 @@ function should.bindAll()
   local files = {}
   for file in lk.Dir(tmp_path):list() do
     local base, filename = lk.directory(file)
-    table.insert(files, filename)
+    lk.insertSorted(files, filename)
   end
   assertValueEqual({
-    'dub',
-    'moo.cpp',
     'Nem_A.cpp',
     'Nem_B.cpp',
+    'dub',
+    'moo.cpp',
   }, files)
 end
 
@@ -108,14 +109,14 @@ function should.changeNamespaceNameOnBind()
   -- found instead of moo.B.C)
   local ins = dub.Inspector {
     INPUT    = {
-      'test/fixtures/namespace',
+      base .. '/fixtures/namespace',
       -- This is just to have the Vect class for gc testing.
-      'test/fixtures/pointers',
+      base .. '/fixtures/pointers',
     },
     doc_dir  = lk.dir() .. '/tmp',
   }
 
-  local tmp_path = 'test/tmp'
+  local tmp_path = base .. '/tmp'
   lk.rmTree(tmp_path, true)
 
   os.execute('mkdir -p '..tmp_path)
@@ -142,7 +143,7 @@ function should.changeNamespaceNameOnBind()
       'Nem::Rect',
       'Vect',
     },
-    custom_bindings = 'test/fixtures/namespace',
+    custom_bindings = base .. '/fixtures/namespace',
   })
   binder.name = nil
   local res = lk.readall(tmp_path .. '/moo_A.cpp')
@@ -159,20 +160,20 @@ function should.changeNamespaceNameOnBind()
 
   assertPass(function()
     binder:build {
-      output   = 'test/tmp/moo.so',
+      output   = base .. '/tmp/moo.so',
       inputs   = {
-        'test/tmp/dub/dub.cpp',
-        'test/tmp/moo_A.cpp',
-        'test/tmp/moo_B.cpp',
-        'test/tmp/moo_B_C.cpp',
-        'test/tmp/moo.cpp',
-        'test/tmp/Vect.cpp',
-        'test/tmp/moo_Rect.cpp',
-        'test/fixtures/pointers/vect.cpp',
+        base .. '/tmp/dub/dub.cpp',
+        base .. '/tmp/moo_A.cpp',
+        base .. '/tmp/moo_B.cpp',
+        base .. '/tmp/moo_B_C.cpp',
+        base .. '/tmp/moo.cpp',
+        base .. '/tmp/Vect.cpp',
+        base .. '/tmp/moo_Rect.cpp',
+        base .. '/fixtures/pointers/vect.cpp',
       },
       includes = {
-        'test/tmp',
-        'test/fixtures/namespace',
+        base .. '/tmp',
+        base .. '/fixtures/namespace',
       },
     }
 
